# finance-graphrag-demo

./: .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  alembic.ini  config.yaml  plan.md  pyproject.toml
alembic/: env.py
docker/graphrag/: docker-compose.yml  neodash-queries.cypher
docs/guide/: 00-agenda-v2.md  01-graphrag-overview-v2.md  02-aws-graphrag-toolkit-v2.md  03-implementation-example-v3.md  04-query-routing-v2.md
docs/lexical-graph/: README.md  aws-profile.md  batch-extraction.md  configuration.md  configuring-batch-extraction.md  faq.md  graph-model.md  graph-store-falkor-db.md  graph-store-neo4j.md  graph-store-neptune-analytics.md  graph-store-neptune-db.md  hybrid-deployment.md  indexing.md  metadata-filtering.md  multi-tenancy.md  overview.md  prompts.md  querying.md  readers.md  security.md  semantic-guided-search.md  storage-model.md  traversal-based-search-configuration.md  traversal-based-search.md  vector-store-neptune-analytics.md  vector-store-opensearch-serverless.md  vector-store-postgres.md  vector-store-s3-vectors.md  versioned-updates.md
experiments/: ENTITY_RESOLUTION_GUIDE.md  EVALUATION_METHODOLOGY.md  GRAPHRAG_WORKGUIDE_GENERAL copy.md  GRAPHRAG_WORKGUIDE_GENERAL.md  Untitled Diagram.drawio  WORK_BREAKDOWN.md  WORK_BREAKDOWN_v2.md  eval_questions.yaml
experiments/configs/: baseline_claude37_cohere.yaml  exp01_claude45_cohere.yaml  exp02_claude4_cohere.yaml  exp03_claude37_titan.yaml  exp04_haiku45_cohere.yaml
sql/: schema.sql
src/tiger_etf/: cli.py  (+3 more)
tests/: test_config.py  test_evaluator.py
(+17 files in other folders)
